# mathlib

./: CMakeLists.txt
include/: Constants.h  Convert.h  EquationSolving.h  Matrix.h  MatrixProjection.h  MatrixTransform.h  Vector.h
src/: Convert.cpp  EquationSolving.cpp  MatrixTransform.cpp
tests/: CMakeLists.txt  base.h  test_simple.cpp
